# src/spark_profiles/generated_control/api/default/attach_recipe_publication_report.py
@@ -1,0 +1,195 @@
+from http import HTTPStatus
+from typing import Any, Optional, Union, cast
+
+import httpx
+
+from ...client import AuthenticatedClient, Client
+from ...types import Response, UNSET
+from ... import errors
+
+from ...models.http_validation_error import HTTPValidationError
+from ...models.test_report_request import TestReportRequest
+from typing import cast
+
+
+
+def _get_kwargs(
+    recipe_id: str,
+    *,
+    body: TestReportRequest,
+
+) -> dict[str, Any]:
+    headers: dict[str, Any] = {}
+
+
+
+
+
+
+    _kwargs: dict[str, Any] = {
+        "method": "put",
+        "url": "/api/v1/catalog/recipes/{recipe_id}/publication-report".format(recipe_id=recipe_id,),
+    }
+
+    _kwargs["json"] = body.to_dict()
+
+
+    headers["Content-Type"] = "application/json"
+
+    _kwargs["headers"] = headers
+    return _kwargs
+
+
+
+def _parse_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Optional[Union[Any, HTTPValidationError]]:
+    if response.status_code == 200:
+        response_200 = response.json()
+        return response_200
+
+    if response.status_code == 422:
+        response_422 = HTTPValidationError.from_dict(response.json())
+
+
+
+        return response_422
+
+    if client.raise_on_unexpected_status:
+        raise errors.UnexpectedStatus(response.status_code, response.content)
+    else:
+        return None
+
+
+def _build_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Response[Union[Any, HTTPValidationError]]:
+    return Response(
+        status_code=HTTPStatus(response.status_code),
+        content=response.content,
+        headers=response.headers,
+        parsed=_parse_response(client=client, response=response),
+    )
+
+
+def sync_detailed(
+    recipe_id: str,
+    *,
+    client: AuthenticatedClient,
+    body: TestReportRequest,
+
+) -> Response[Union[Any, HTTPValidationError]]:
+    """ Attach Publication Report
+
+    Args:
+        recipe_id (str):
+        body (TestReportRequest):
+
+    Raises:
+        errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
+        httpx.TimeoutException: If the request takes longer than Client.timeout.
+
+    Returns:
+        Response[Union[Any, HTTPValidationError]]
+     """
+
+
+    kwargs = _get_kwargs(
+        recipe_id=recipe_id,
+body=body,
+
+    )
+
+    response = client.get_httpx_client().request(
+        **kwargs,
+    )
+
+    return _build_response(client=client, response=response)
+
+def sync(
+    recipe_id: str,
+    *,
+    client: AuthenticatedClient,
+    body: TestReportRequest,
+
+) -> Optional[Union[Any, HTTPValidationError]]:
+    """ Attach Publication Report
+
+    Args:
+        recipe_id (str):
+        body (TestReportRequest):
+
+    Raises:
+        errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
+        httpx.TimeoutException: If the request takes longer than Client.timeout.
+
+    Returns:
+        Union[Any, HTTPValidationError]
+     """
+
+
+    return sync_detailed(
+        recipe_id=recipe_id,
+client=client,
+body=body,
+
+    ).parsed
+
+async def asyncio_detailed(
+    recipe_id: str,
+    *,
+    client: AuthenticatedClient,
+    body: TestReportRequest,
+
+) -> Response[Union[Any, HTTPValidationError]]:
+    """ Attach Publication Report
+
+    Args:
+        recipe_id (str):
+        body (TestReportRequest):
+
+    Raises:
+        errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
+        httpx.TimeoutException: If the request takes longer than Client.timeout.
+
+    Returns:
+        Response[Union[Any, HTTPValidationError]]
+     """
+
+
+    kwargs = _get_kwargs(
+        recipe_id=recipe_id,
+body=body,
+
+    )
+
+    response = await client.get_async_httpx_client().request(
+        **kwargs
+    )
+
+    return _build_response(client=client, response=response)
+
+async def asyncio(
+    recipe_id: str,
+    *,
+    client: AuthenticatedClient,
+    body: TestReportRequest,
+
+) -> Optional[Union[Any, HTTPValidationError]]:
+    """ Attach Publication Report
+
+    Args:
+        recipe_id (str):
+        body (TestReportRequest):
+
+    Raises:
+        errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
+        httpx.TimeoutException: If the request takes longer than Client.timeout.
+
+    Returns:
+        Union[Any, HTTPValidationError]
+     """
+
+
+    return (await asyncio_detailed(
+        recipe_id=recipe_id,
+client=client,
+body=body,
+
+    )).parsed
